--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<apt-maven.version>1.1.3</apt-maven.version>
 		<apache.commons.lang.version>3.7</apache.commons.lang.version>
 		<hikaricp.version>2.7.2</hikaricp.version>
+		<rest-assured.version>2.9.0</rest-assured.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -89,6 +90,11 @@
 			<artifactId>HikariCP</artifactId>
 			<version>${hikaricp.version}</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.jayway.restassured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>${rest-assured.version}</version>
 		</dependency>
 	</dependencies>
 
